--- a/resume.yaml
+++ b/resume.yaml
@@ -17,8 +17,8 @@ cv:
         start_date: 2023-09
         end_date: 2027-05
         highlights:
-          - 'GPA: 3.970/4.0'
-          - "Dean's List: 2023--2024"
+          - 'GPA: 3.975/4.0'
+          - "Dean's List: 2023--2024; Econometrics game 2025 qualifier; Winner in the Web Development track, Uncommon Hacks 2024"
           - 'Coursework: Honors Econometrics (ongoing), Honors Elements of Economic Analysis I--III (ongoing), Accelerated Analysis in $$\mathbb{R}^n$$ I--III (ongoing), Statistical Theory and Methods Ia--IIa, Systems Programming II, Abstract Linear Algebra, Introduction to Mathematical Probability'
     Research:
       - company: Becker Friedman Institute
